--- a/docs/components/link.mdx
+++ b/docs/components/link.mdx
@@ -6,6 +6,7 @@ sidebar_label: Link
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import LiveDemoComponent from './helpers/components/live-demo.tsx';
+import BestPracticesComponent from './helpers/components/best-practices.tsx';
 
 import link_anatomy from './img/link/link-anatomy.jpg';
 import link_do_1 from './img/link/link-do-1.jpg';
@@ -69,68 +70,27 @@ O componente link foi projetado para atender os requisitos das Diretrizes de Ace
 - Use labels (rótulos) que descrevam a finalidade do link. Evite texto como "Clique aqui", por exemplo.
   (WCAG [2.4.9: Link Purpose - Link Only](https://www.w3.org/WAI/WCAG21/Understanding/link-purpose-link-only))
 
-<div style={{ padding: '0 0 24px 0', display:'flex' }}>
 
-<div style={{ display: 'inline-block', width: '48%' }}>
-<img
-src={link_do_1}
-alt="Link com a label Animalia DS"
+<BestPracticesComponent
+  doImg={link_do_1}
+  doAlt="Link com a label Animalia DS"
+  doDescription="Use labels que descrevam precisamente o direcionamento do link, como o nome da página para qual o usuário será direcionado."
+  dontImg={link_dont_1}
+  dontAlt="Link com a label clicando aqui"
+  dontDescription="Não use labels muito vagas ou genéricas para o link, elas devem informar claramente o local de acesso."
 />
-
-**Fazer**
-
-Use labels que descrevam precisamente o direcionamento do link, como o nome da página para qual o usuário será direcionado.
-
-</div>
-
-<div style={{ display: 'inline-block', width: '4%' }}></div>
-
-<div  style={{ display: 'inline-block', width: '48%' }}>
-<img
-src={link_dont_1}
-alt="Link com a label clicando aqui"
-/>
-
-**Não fazer**
-
-Não use labels muito vagas ou genéricas para o link, elas devem informar claramente o local de acesso.
-
-</div>
-
-</div>
 
 
 - Não use cores para o link com baixo contraste entre o fundo e o texto, pois isso dificulta o entendimento do conteúdo. É possível conferir se o contraste está adequado e atingindo o valor de 7:1 em um [Contrast Checker](https://webaim.org/resources/contrastchecker/) (WCAG [1.4.6: Contrast](https://www.w3.org/WAI/WCAG21/Understanding/contrast-enhanced.html))
 
-<div style={{ padding: '0 0 24px 0', display:'flex'}}>
-
-<div style={{ display: 'inline-block', width: '48%' }}>
-<img
-src={link_do_2}
-alt="Link com contraste alto e underline com a label documentação"
+<BestPracticesComponent
+  doImg={link_do_2}
+  doAlt="Link com contraste alto e underline com a label documentação"
+  doDescription="Utilize o componente de link com contraste adequado para que os usuários consigam identificar facilmente no meio do texto."
+  dontImg={link_dont_2}
+  dontAlt="Link com contraste baixo, sem o underline e com a label documentação"
+  dontDescription="Além do cuidado com o contraste, não remova o underline do link, pois isso dificulta a identificação do componente."
 />
-
-**Fazer**
-
-Utilize o componente de link com contraste adequado para que os usuários consigam identificar facilmente no meio do texto.
-
-</div>
-
-<div style={{ display: 'inline-block', width: '4%' }}></div>
-
-<div  style={{ display: 'inline-block', width: '48%' }}>
-<img
-src={link_dont_2}
-alt="Link com contraste baixo, sem o underline e com a label documentação"
-/>
-
-**Não fazer**
-
-Além do cuidado com o contraste, não remova o underline do link, pois isso dificulta a identificação do componente.
-
-</div>
-
-</div>
 
 
 ### Interação
@@ -138,68 +98,27 @@ Além do cuidado com o contraste, não remova o underline do link, pois isso dif
 - A interação de foco deve compor o componente, sendo a navegação por mouse ou teclado, e em sequência lógica. Como por exemplo, ao pressionar `Enter`, executa o link e move o foco para o destino do link. (WCAG [2.4.3: Focus Order](https://www.w3.org/WAI/WCAG21/Understanding/focus-order))
 - A distância entre o link e outras áreas interativas deve ter no mínimo 44px de altura e largura, para permitir distanciamento seguro e para que nenhum outro elemento seja acionado sem intenção. (WCAG [2.5.8: Pointer Target Spacing](https://w3c.github.io/wcag/understanding/pointer-target-spacing))
 
-<div style={{ padding: '0 0 24px 0', display:'flex' }}>
-
-<div style={{ display: 'inline-block', width: '48%' }}>
-<img
-src={link_do_3}
-alt="Dois links dispostos com o espaçamento adequado de 44px"
+<BestPracticesComponent
+  doImg={link_do_3}
+  doAlt="Dois links dispostos com o espaçamento adequado de 44px"
+  doDescription="Utilize um espaçamento adequado para que o tamanho do componente, mais o espaçamento para outro elemento, alcance a soma de no mínimo 44px."
+  dontImg={link_dont_3}
+  dontAlt="Dois links com pouco espaçamento, totalizando 32px"
+  dontDescription="Um espaçamento menor do que o necessário, com soma inferior a 44px, pode ocasionar em um clique indesejado."
 />
-
-**Fazer**
-
-Utilize um espaçamento adequado para que o tamanho do componente, mais o espaçamento para outro elemento, alcance a soma de no mínimo 44px.
-
-</div>
-
-<div style={{ display: 'inline-block', width: '4%' }}></div>
-
-<div  style={{ display: 'inline-block', width: '48%' }}>
-<img
-src={link_dont_3}
-alt="Dois links com pouco espaçamento, totalizando 32px"
-/>
-
-**Não fazer**
-
-Um espaçamento menor do que o necessário, com soma inferior a 44px, pode ocasionar em um clique indesejado.
-
-</div>
-
-</div>
 
 
 - Quando se tratar de um link para uma página externa, é recomendável que esta informação seja adicionada na label do componente link, para que a mudança de contexto seja informada ao usuário (WCAG [3.2.5: Change on Request](https://www.w3.org/WAI/WCAG21/Understanding/change-on-request)).
 
-<div style={{ padding: '0 0 24px 0', display:'flex' }}>
-
-<div style={{ display: 'inline-block', width: '48%' }}>
-<img
-src={link_do_4}
-alt="Link com complemento entre parênteses, escrito que abre em uma outra guia"
+<BestPracticesComponent
+  doImg={link_do_4}
+  doAlt="Link com complemento entre parênteses, escrito que abre em uma outra guia"
+  doDescription="Informe de forma clara, qual comportamento o link terá, se irá abrir uma outra guia ou janela."
+  dontImg={link_dont_4}
+  dontAlt="Link com complemento entre parênteses, escrito que abre em outro lugar"
+  dontDescription="Não insira informações genéricas que não contribuem para o entendimento do usuário."
 />
 
-**Fazer**
-
-Informe de forma clara, qual comportamento o link terá, se irá abrir uma outra guia ou janela.
-
-</div>
-
-<div style={{ display: 'inline-block', width: '4%' }}></div>
-
-<div  style={{ display: 'inline-block', width: '48%' }}>
-<img
-src={link_dont_4}
-alt="Link com complemento entre parênteses, escrito que abre em outro lugar"
-/>
-
-**Não fazer**
-
-Não insira informações genéricas que não contribuem para o entendimento do usuário.
-
-</div>
-
-</div>
 
 ### Acessibilidade tratada no componente
 
