fix: correção link

--- a/docs/components/modal.mdx
+++ b/docs/components/modal.mdx
@@ -133,7 +133,7 @@ O modal contém 5 variações de tamanho, que dizem respeito à sua **largura**:
   alt="As 4 variações de footer no UI Kit, variando a quantidade de ações"
 />
 
-A altura do modal, independente do tamanho, é sempre variável, conforme detalhado na seção [comportamento](https://www.notion.so/Modal-307002dc72a74960a5afea92edefad38).
+A altura do modal, independente do tamanho, é sempre variável, conforme detalhado na seção [comportamento](#comportamento).
 
 A variação `md` é o tamanho padrão.
 
